datasource sqlite {
    provider = "sqlite"
    url      = "file:./dev.db"
}

generator client {
    provider = "prisma-client-js"
}

generator typegraphql {
    provider = "typegraphql-prisma"
}

generator dbml {
    provider = "prisma-dbml-generator"
}

model User {
    id    String @id @unique @default(cuid())
    email String @unique
    age   Int?
}

model PoleHistory {
    id      String   @id @unique @default(cuid())
    pole    Pole     @relation(fields: [poleId], references: [id])
    poleId  Int
    date    DateTime
    comment String
}

model Pole {
    id           Int           @id @unique @default(autoincrement())
    length       String
    cm           Int
    weight       Int
    flex         Decimal
    serialNumber String?
    status       String // Active, Pending, Sold, Rented, Broken
    dop          DateTime
    history      PoleHistory[]
    note         String?
    nfc          String?       @unique
    cost         Decimal
    soldAt       Decimal?
    revenue      Decimal?
    orderItem    OrderItem[]
}

model PoleRate {
    id           String   @id @unique @default(cuid())
    length       String   @unique
    newRate      Decimal?
    clubNewRate  Decimal?
    usedRate     Decimal?
    clubUsedRate Decimal?
    rentSeason   Decimal?
    rentMonth    Decimal?
    rentMeet     Decimal?
}

model Customer {
    id        String  @id @unique @default(cuid())
    firstName String
    lastName  String
    address   String?
    city      String?
    state     String?
    zip       String?
    phone     String?
    email     String?
    orders    Order[]
}

model Order {
    id         String      @id @unique @default(cuid())
    customerId String
    customer   Customer    @relation(fields: [customerId], references: [id])
    orderItems OrderItem[]
    orderDate  DateTime
    orderTotal Decimal
    closed     Boolean
}

model OrderItem {
    id        String  @id @unique @default(cuid())
    orderType String // Season, Monthly, Meet, Sale
    pole      Pole    @relation(fields: [poleId], references: [id])
    order     Order   @relation(fields: [orderId], references: [id])
    orderId   String
    price     Decimal
    poleId    Int
}
