//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  age Int
}

Table PoleHistory {
  id String [pk]
  pole Pole [not null]
  poleId Int [not null]
  date DateTime [not null]
  comment String [not null]
}

Table Pole {
  id Int [pk, increment]
  length String [not null]
  cm Int [not null]
  weight Int [not null]
  flex Decimal [not null]
  serialNumber String
  status String [not null]
  dop DateTime [not null]
  history PoleHistory [not null]
  note String
  nfc String [unique]
  cost Decimal [not null]
  soldAt Decimal
  revenue Decimal
  orderItem OrderItem [not null]
}

Table PoleRate {
  id String [pk]
  length String [unique, not null]
  newRate Decimal
  clubNewRate Decimal
  usedRate Decimal
  clubUsedRate Decimal
  rentSeason Decimal
  rentMonth Decimal
  rentMeet Decimal
}

Table Customer {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  address String
  city String
  state String
  zip String
  phone String
  email String
  orders Order [not null]
}

Table Order {
  id String [pk]
  customerId String [not null]
  customer Customer [not null]
  orderItems OrderItem [not null]
  orderDate DateTime [not null]
  orderTotal Decimal [not null]
  closed Boolean [not null]
}

Table OrderItem {
  id String [pk]
  orderType String [not null]
  pole Pole [not null]
  order Order [not null]
  orderId String [not null]
  price Decimal [not null]
  poleId Int [not null]
}

Ref: PoleHistory.poleId > Pole.id

Ref: Order.customerId > Customer.id

Ref: OrderItem.poleId > Pole.id

Ref: OrderItem.orderId > Order.id